# RetroRealm

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/api/src/openapi/: mod.rs
backend/migration/src/: lib.rs
backend/src/: main.rs
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts
frontend/src/components/: login.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/styles/: globals.css
