[package]
name = "retrorealm"
version = "0.1.0"
edition = "2021"
authors = ["DevYukine <devyukine@gmx.de>"]
description = "backend for retrorealm"

[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
api = { path = "api" }
env_logger = "^0.11"
log = "^0.4"
dotenvy = "^0.15"

[build-dependencies]
built = { version = "^0.7", features = ["chrono", "semver", "git2"] }
